--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,7 +25,12 @@
         <activity
             android:name=".MainActivity"
             android:exported="true">
+
         </activity>
+
+        <meta-data
+            android:name = "keyValue"
+            android:value = "${KEY}"/>
     </application>
 
 </manifest>
